add swagger schema for customers/login
